# LiDAR-Forensics

./: .env.example  .gitignore  FINAL_STATUS.md  GITHUB_PUBLICATION_STATUS.md  LICENSE  README.md  pyproject.toml  run_demo.bat  run_demo.sh
docs/: ARCHITECTURE.md  BUILD_LOG.md  CODEX_AND_HUMAN_ROLES.md  COMPETITION_DESCRIPTION.md  DEMO_SCRIPT.md  DETECTION_METHOD.md  FINDING_TAXONOMY.md  PRIVACY.md  PUBLIC_EVIDENCE.md  PUBLIC_RELEASE_CHECKLIST.md  SUBMISSION_PACK.md  VIDEO_RECORDING_CHECKLIST.md
public_evidence/: README.md  detector_result.json  findings.csv  standalone_report.html  synthetic_lidar_stall.json
src/lidar_forensics/: __init__.py  app.py  detector.py  models.py  reports.py  synthetic.py
src/lidar_forensics/adapters/: __init__.py  base.py  csv_adapter.py  json_adapter.py  mcap_adapter.py  rosbag_adapter.py
src/lidar_forensics/static/: app.js  index.html  styles.css
synthetic_data/: global_recording_gap.csv  global_recording_gap.json  lidar_stall_3_4_seconds.csv  manifest.json  normal_recording.csv  normal_recording.json
tests/: test_adapters.py  test_api.py  test_detector.py  test_reports.py  test_ui_contract.py
