[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-forensics"
version = "0.1.0"
description = "Public-safe diagnostics for silent LiDAR stream failures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LiDAR Forensics contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
ai = ["openai>=1.50,<2"]
ros = ["rosbags>=0.10,<1"]
mcap = ["mcap>=1.2,<2"]
dev = ["httpx>=0.27,<1", "pytest>=8,<9"]

[project.scripts]
lidar-forensics = "lidar_forensics.app:main"
lidar-forensics-generate = "lidar_forensics.synthetic:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lidar_forensics = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

